# Coursework_OOP

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: api_interactions.py  filehandler.py  head_hunter_api.py  vacancies.py
tests/: conftest.py  test_api_interactions.py  test_filehandler.py  test_head_hunter_api.py  test_main.py  test_vacancies.py
